Fixing layout problems for Pvgna icon after rebasing master

--- a/src/components/Visualizations/Table/HeroImage.css
+++ b/src/components/Visualizations/Table/HeroImage.css
@@ -166,7 +166,7 @@
 }
 
 .pvgnaGuideContainer {
-  margin: auto 20px auto -15px;
+  margin: auto;
 }
 
 .pvgnaGuideIcon {
